# scanty

./: Makefile.am  README.md  autogen.sh  configure.ac
client/: Makefile.am  client_main.cpp
db/: Makefile.am  db_main.cpp
filter/: locks
include/: configuration.h  decl_tree.h  gcc-common.h  gcc-generate-gimple-pass.h  logger.h  protocol.h  transport.h
libscanty/: Makefile.am  configuration.cpp  decl_tree.cpp  logger.cpp  protocol.cpp  transport.cpp
plugin/: Makefile.am  decl_tree_ssa.cpp  decl_tree_ssa.h  plugin_main.cpp
t/: test.sh  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test3.c  test4.c  test5.c  test5.h  test6.c  test7.c  test9.c
